--- a/front/src/app/MenuBar/MenuBarView.html
+++ b/front/src/app/MenuBar/MenuBarView.html
@@ -1,4 +1,4 @@
-
+<ng2-slim-loading-bar [height]="'4px'" ></ng2-slim-loading-bar>
 <nav class="navbar navbar-toggleable-md navbar-light fixed-top shadow white">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
