--- a/front/src/app/signin/signin.component.html
+++ b/front/src/app/signin/signin.component.html
@@ -1,12 +1,12 @@
-<div class="row mt-9">
+<div class="row mt-md-9">
     <div class="col-md-12">
         <md-card class="p-0">
             <div class="row">
-                <div class="col-md-4">
-                    <div class="pt-0 bg-primary-color height-content-card">
+                <div class="col-md-4 col-12">
+                    <div class="pt-0 bg-primary-color h-100">
                         <div class="row h-100">
                             <div class="col-sm-12 my-auto text-center">
-                                <img src="../../../assets/img/pulpe-logo-white.png" width="25%">
+                                <img src="../../assets/logo.png" class="w-25">
                                 <div class="pt-2">
                                     <h1>Pulpe</h1>
                                     <h2>Connectez-vous!</h2>
@@ -16,43 +16,55 @@
                     </div>
                 </div>
 
-                <div class="col-md-8">
+                <div class="col-md-8 col-12">
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="pt-0 white height-content-card">
-                                <div class="row">
-                                    <div class="col-md-12 pt-2 pl-">
-                                        <h2 class="pt-1 text-primary">Connexion</h2>
+                            <div class="pt-0 white">
+                                <!--We can't put this two col in row because padding canceling of row break the design -->
+                                <!--of card, that apply shadow -->
+                                <div class="col-md-12 col-12 pt-2">
+                                    <h2 class="pt-1 text-center text-md-left text-primary">Connexion</h2>
+                                </div>
+                                <div *ngIf="displaySigninError" class="col-md-12 col-12 pr-md-4">
+                                    <div class="alert alert-danger">
+                                        {{errorMessage}}
                                     </div>
                                 </div>
-                                <div class="row pt-3">
-                                    <i class="col-md-2 fa fa-2x fa-envelope prefix my-auto text-right"></i>
-                                    <div class="col-md-10">
-                                        <md-input-container class="col-md-10">
+                                <form>
+                                    <div class="form-group">
+                                        <i class="col-md-1 offset-1 col-2 text-center fa fa-2x fa-envelope prefix my-auto pr-0"></i>
+                                        <md-input-container class="col-7 col-md-8">
                                             <input id="inputEmail" type="email" class="form-control" mdInput
-                                                   placeholder="Saisissez votre email" [(ngModel)]="login">
+                                                   placeholder="Saisissez votre email"
+                                                   [(ngModel)]="authenticationProfile.login"
+                                                   name="authenticationProfile.login">
                                         </md-input-container>
                                     </div>
-                                    <i class="col-md-2 fa fa-2x fa-lock prefix my-auto text-right"></i>
-                                    <div class="col-md-10">
-                                        <md-input-container class="col-md-10">
+                                    <div class="form-group">
+                                        <i class="col-md-1 offset-1 col-2 text-center fa fa-2x fa-lock prefix my-auto pr-0"></i>
+                                        <md-input-container class="col-7 col-md-8">
                                             <input id="inputPassword" type="password" class="form-control" mdInput
-                                                   placeholder="Saisissez votre mot de passe" [(ngModel)]="password">
+                                                   placeholder="Saisissez votre mot de passe"
+                                                   [(ngModel)]="authenticationProfile.password"
+                                                   name="authenticationProfile.password">
                                         </md-input-container>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-5 offset-7 bottom-right">
-                                        <button [class.disabled]="signing" type="button" class="btn btn-lg btn-primary text-white w-100" (click)="signin()">Se
-                                            connecter
-                                        </button>
+                                    <div class="form-group">
+                                        <md-checkbox class="offset-md-2 col-md-10 offset-3 col-9"
+                                                     [(ngModel)]="authenticationProfile.rememberMe"
+                                                     name="authenticationProfile.rememberMe">Se souvenir de moi
+                                        </md-checkbox>
                                     </div>
-                                </div>
-                                <div class="row" *ngIf="authenticate">
-                                    <div class="col-md-12">
-                                        {{authenticate.token}}
+                                    <div class="form-group mb-3">
+                                        <div class="offset-md-7 col-md-5 col-12 bottom-md-right">
+                                            <button [class.disabled]="signing" type="button"
+                                                    class="btn btn-lg btn-primary text-white w-100" (click)="signin()">
+                                                Se
+                                                connecter
+                                            </button>
+                                        </div>
                                     </div>
-                                </div>
+                                </form>
                             </div>
                         </div>
                     </div>
