--- a/front/src/app/MenuBar/MenuBarView.html
+++ b/front/src/app/MenuBar/MenuBarView.html
@@ -11,7 +11,8 @@
             <a class="nav-item nav-link" [routerLinkActive]="['active']" *ngIf="auth.authenticated()"
                routerLink="/programme">Mon programme <span
                     class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" [routerLinkActive]="['active']" *ngIf="auth.authenticated()" href="#">Mon
+            <a class="nav-item nav-link" [routerLinkActive]="['active']" *ngIf="auth.authenticated()"
+               routerLink="/evolution">Mon
                 évolution</a>
             <a class="nav-item nav-link" [routerLinkActive]="['active']" *ngIf="auth.authenticated()"
                routerLink="/seances">Mes séances</a>
