Signup for the front part

--- a/front/src/app/profile-completation/profile-completation.component.html
+++ b/front/src/app/profile-completation/profile-completation.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-10 offset-md-1">
+    <div class="col-md-12">
         <md-card>
             <div class="row">
                 <div class="col-md-12">
@@ -110,7 +110,7 @@
 </div>
 
 <div class="row pt-4">
-    <div class="col-md-4 offset-md-6">
+    <div class="col-md-4 offset-md-4">
         <a class="btn btn-lg w-100 disabled" md-raised-button routerLink=".">Go!</a>
     </div>
 </div>
