Profile for the front part with his components profile-photo & profile-infos

--- a/front/src/app/MenuBar/MenuBarView.html
+++ b/front/src/app/MenuBar/MenuBarView.html
@@ -24,8 +24,9 @@
                    data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i
                         class="ion-ios-contact-outline"></i></a>
                 <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item nav-link nav-item" routerLink="/profil">Mon profil</a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item nav-link nav-item" (click)="signout()">Déconnexion</a>
-                    <!--<div class="dropdown-divider"></div>-->
                     <!--<a class="dropdown-item" href="#">Separated link</a>-->
                 </div>
             </li>
