Validation of profil completion form (not finished)

--- a/front/src/assets/style/custom.scss
+++ b/front/src/assets/style/custom.scss
@@ -6,6 +6,7 @@ body {
   background-color: #eee;
   color: $primary-text;
   padding-top: 4.5rem;
+  padding-bottom: 2rem;
 }
 
 .bg-primary-color {
