--- a/front/src/assets/style/angular-material-custom.scss
+++ b/front/src/assets/style/angular-material-custom.scss
@@ -9,10 +9,10 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
 $candy-app-primary: mat-palette($mat-deep-orange);
-$candy-app-accent:  mat-palette($mat-blue, A200);
+$candy-app-accent: mat-palette($mat-blue, A200);
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn:    mat-palette($mat-amber, A700);
+$candy-app-warn: mat-palette($mat-amber, A700);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
@@ -30,3 +30,21 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
   border-top-width: 1px;
   border-top-style: solid;
 }
+
+md-input-container.ng-touched.ng-invalid .mat-input-placeholder {
+  color: red;
+}
+
+md-input-container.ng-touched.ng-invalid .mat-input-underline {
+  border-color: red;
+}
+
+md-input-container.ng-touched.ng-invalid .mat-input-ripple {
+  background-color: red;
+}
+
+md-input-container.ng-touched.ng-invalid md-hint {
+  color: red;
+}
+
+/*# sourceMappingURL=signin.component.css.map */
