Measurement on the back parts

--- a/front/src/app/Home/HomeView.html
+++ b/front/src/app/Home/HomeView.html
@@ -43,7 +43,7 @@
                         <md-card-content>
                             <div class="measurement">
                                 <h4 class="text-light-weight">Mes mensurations</h4>
-                                <img src="../../../assets/img/man-silouhette-2-infos.png"
+                                <img src="../../assets/img/man-silouhette-2-infos.png"
                                      class="no-shadow d-inline text-center"
                                      width="70%">
                                 <div (mouseover)="displayPec()" (mouseleave)="hidePec()" class="pecEventLayer">
