Refactoring of navbar and home component

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,4 @@
-<pulpe-menu-bar-cmp></pulpe-menu-bar-cmp>
+<pulpe-navbar></pulpe-navbar>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
