--- a/front/src/app/navbar/navbar.component.html
+++ b/front/src/app/navbar/navbar.component.html
@@ -8,13 +8,16 @@
   <a class="navbar-brand text-primary pulpe-brand" href="#">Pulpe</a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <ul class="nav navbar-nav mx-auto w-100">
-      <a class="nav-item nav-link" [routerLinkActive]="['active']" *ngIf="auth.authenticated()"
+      <a class="nav-item nav-link" [routerLinkActive]="['active']"
+         *ngIf="auth.authenticated() && profileIsCompleted"
          routerLink="/programme">Mon programme <span
               class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" [routerLinkActive]="['active']" *ngIf="auth.authenticated()"
+      <a class="nav-item nav-link" [routerLinkActive]="['active']"
+         *ngIf="auth.authenticated() && profileIsCompleted"
          routerLink="/evolution">Mon
         évolution</a>
-      <a class="nav-item nav-link" [routerLinkActive]="['active']" *ngIf="auth.authenticated()"
+      <a class="nav-item nav-link" [routerLinkActive]="['active']"
+         *ngIf="auth.authenticated() && profileIsCompleted"
          routerLink="/seances">Mes séances</a>
     </ul>
     <ul class="nav navbar-nav navbar-right" *ngIf="auth.authenticated()">
